Truncating on the path to purchase content to avoid overlap

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -221,6 +221,7 @@
 			.step-content {
 				order: 1;
 				padding-left: $sizeGrid;
+				padding-right: 0;
 			}
 
 			.step-edge {
